fix overlapping, fix about button/homepage, fix scroll on homepage for mobile

--- a/map-icon.css
+++ b/map-icon.css
@@ -10,7 +10,7 @@
   left: 1em;
   transform-origin: left;
   transition: transform 0.1s ease;
-  z-index: 9999; /* way higher */
+  z-index: 1000; /* way higher */
   pointer-events: auto; /* ensures it's clickable */
 
 }
